# rust-life-expectancy

./: Cargo.toml  README.md  build.foo
res/: life-expectancy.csv
src/: main.rs  readme.md
